# rag-llmops-demo-apps

./: .env.example  .gitignore  README.md  app.yaml  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml
agent_server/: agent.py  evaluate_agent.py
data/knowledge_base/: company_culture.txt  hr_policies.txt  it_policies.txt  onboarding_guide.txt
docs/: architecture.md  deployment_guide.md  obo_setup_guide.md  troubleshooting_guide.md
notebooks/: 01_data_ingestion.py  02_vector_index_creation.py  03_prompt_engineering.py  04_agent_build.py  04_agent_evaluation.py  05_agent_evaluation.py  05_inference_testing.py  05_monitoring_dashboard.py  06_deployment_manifest.py  06_model_registration.py  06_monitoring_dashboard.py  07_app_deployment.py  07_deployment_manifest.py  08_inference_testing.py  09_monitoring_dashboard.py
resources/: build_evaluate.job.yml  data_preparation.job.yml  deploy.job.yml  deployment_manifest.job.yml  end_to_end.job.yml  model_artifacts.yml  monitoring.job.yml
scripts/: quickstart.py  rollback.sh
tests/: test_agent_local.py
